--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@react-input/mask": "^2.0.4",
     "clsx": "^2.1.1",
     "next": "15.3.2",
     "react": "^19.0.0",
